# python-circuitpython

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  build.py  cfg.yml  pyproject.toml  readme.md
src/: __init__.py  app.py  main.py  mqtt.py
src/temperature/: temperature_client.py  temperature_driver.py  test_temperature_client.py
tests/: __init__.py  test_hil.py  test_integration.py
tests/fixtures/: containers.py
